syntax = "proto3";

import "actions/proto/vql.proto";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

// Messages to interact with the API

// This message is written in the VFS datastore and contains metadata
// about the directory listing. Each protobuf refers to the files
// contained in a single directory. The actual file listing is stored
// in the flow's collection and this protobuf contains the range of
// rows within the collection that refers to this current directory.
message VFSListResponse {
  string Response = 1;
  repeated string Columns = 2;
  VQLRequest Query = 3;
  uint64 timestamp = 4;
  uint64 total_rows = 7;
  repeated VQLTypeMap types = 8;

  // The actual artifact that contains the data.
  string client_id = 9;
  string flow_id = 10;

  // The artifact name that contains the actual data for this
  // directory. If not specified it will be "System.VFS.ListDirectory"
  string artifact = 13;
  uint64 start_idx = 11;
  uint64 end_idx = 12;

  // The version number that tracks the total download mutations in
  // this directory.
  uint64 download_version = 14;
}

message VFSStatDownloadRequest {
    string client_id = 1;
    string accessor = 4;

    repeated string components = 6;
}

message VFSListRequest {
    string client_id = 1;
    uint64 recursion_depth = 3;
    repeated string vfs_components = 4;
}

message VFSListRequestState {
    repeated string components = 4;
    string accessor = 3;
    VQLResponse current = 2;
}

message VFSDownloadFileRequest {
    string client_id = 1;

    repeated string vfs_components = 2;
}


message SearchFileRequest {
    repeated string vfs_components = 2;

    // If true pad sparse files.
    bool padding = 7;

    // The term to search for
    string term = 3;

    // The type of search term - default "string", "regex"
    string type = 4;

    // Where to begin the search
    uint64 offset = 5;

    // If true we search forward otherwise we search backwards from
    // the offset
    bool forward = 6;
}

message SearchFileResponse {
    repeated string vfs_components = 2;

    uint64 hit = 3;
}